--- a/package.json
+++ b/package.json
@@ -1,7 +1,4 @@
 {
-  "name": "typescript",
-  "version": "1.0.0",
-  "license": "MIT",
   "scripts": {
     "build": "npm run clean; tsc; npm run copy-views; npm run copy-views",
     "clean": "rm -rf dist",
@@ -12,19 +9,15 @@
     "body-parser": "^1.20.1",
     "bootstrap": "^5.2.2",
     "dotenv": "^10.0.0",
-    "ejs": "^3.1.8",
     "express": "^4.17.1",
     "express-openid-connect": "^2.5.0",
     "fs": "0.0.1-security",
     "https": "^1.0.0",
-    "node-fetch": "^2.6.1",
-    "path": "^0.12.7",
     "pg": "^8.8.0",
     "pug": "^3.0.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
-    "@types/node-fetch": "2.6.1",
     "@types/pg": "^8.6.5",
     "connect-livereload": "^0.6.1",
     "keyv": "4.5.0",
@@ -32,6 +25,6 @@
     "nodemon": "^2.0.20"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": "12.16.3"
   }
 }
