--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "scripts": {
-    "build": "npm run clean && tsc && npm run copy-views && npm run copy-views",
-    "clean": "if exist dist rmdir /s /q dist",
-    "copy-views": "robocopy /mir /NFL /NDL /NJH /NJS /nc /ns /np src/views/ dist/views & exit 0",
-    "dev": "nodemon",
-    "start": "ts-node ./src/webapp.ts"
+    "build": "npm run clean; tsc; npm run copy-views; npm run copy-views",
+    "clean": "rm -rf dist",
+    "copy-views": "cp -r src/views/ dist/views/",
+    "start": "node dist/webapp.js"
   },
   "dependencies": {
     "body-parser": "^1.20.1",
